added another api method; added prefix "/api/v1" to all api routes
